# zilpay-core

./: .gitignore  .gitmodules  BITCOIN_INTEGRATION_ANALYSIS.md  Cargo.toml  LICENSE  build.rs  repomix-output.txt
.cargo/: config.toml
background/: Cargo.toml
background/src/: bg_book.rs  bg_connections.rs  bg_crypto.rs  bg_provider.rs  bg_rates.rs  bg_settings.rs  bg_storage.rs  bg_token.rs  bg_tx.rs  bg_wallet.rs  bg_worker.rs  book.rs  connections.rs  device_indicators.rs  lib.rs  traits.rs
bincode/: Cargo.toml
bincode/src/: lib.rs
cache/: Cargo.toml
cache/src/: lib.rs
cipher/: Cargo.toml
cipher/src/: aes.rs  argon2.rs  cyber.rs  keychain.rs  kuznechik.rs  lib.rs  ntrup.rs  options.rs  password.rs  session.rs
config/: Cargo.toml
config/src/: abi.rs  address.rs  argon.rs  bip39.rs  cipher.rs  contracts.rs  key.rs  lib.rs  provider.rs  session.rs  sha.rs  storage.rs  wallet.rs
crypto/: Cargo.toml
crypto/src/: bip49.rs  keypair.rs  lib.rs  schnorr.rs  slip44.rs  xor_hash.rs
docs/superpowers/plans/: 2026-04-05-path-based-accounts.md
errors/: Cargo.toml
errors/src/: account.rs  address.rs  background.rs  bip32.rs  cache.rs  cipher.rs  intl.rs  keychain.rs  keypair.rs  lib.rs  network.rs  qrcode.rs  rpc.rs  session.rs  settings.rs  storage.rs  token.rs  token_quotes.rs  tx.rs  wallet.rs
history/: Cargo.toml
history/src/: lib.rs  status.rs  transaction.rs  transaction_request.rs
intl/: Cargo.toml
intl/src/: lib.rs  number.rs  wei.rs
network/: Cargo.toml  source_code.txt
network/src/: block_parse.rs  common.rs  ft_parse.rs  gas_parse.rs  lib.rs  nonce_parser.rs  provider.rs  rates.rs  scilla_stake.rs  stake.rs  token.rs  tx_parse.rs  zil_stake_evm.rs  zil_stake_parse.rs
network/src/btc/: mod.rs
network/src/evm/: block_parse.rs  ft_parse.rs  gas_parse.rs  mod.rs  nonce_parser.rs  tx_parse.rs
network/src/solana/: mod.rs  responses.rs  tx_builder.rs
network/src/tron/: mod.rs  responses.rs
network/src/zil/: mod.rs  scilla_stake.rs  stake.rs  zil_stake_evm.rs
proto/: Cargo.toml  build.rs
proto/google/api/: annotations.proto  http.proto
proto/src/: address.rs  bip32.rs  btc_addr.rs  btc_tx.rs  btc_utils.rs  keypair.rs  lib.rs  pubkey.rs  secret_key.rs  signature.rs  solana_tx.rs  transaction.rs  tron_tx.rs  tx.rs  utils.rs  zil_address.rs  zil_tx.rs  zq1_proto.rs
proto/src/tron_generated/: google.api.rs  mod.rs  protocol.rs
qrcode/: Cargo.toml
qrcode/src/: parse.rs
qrcodes/: Cargo.toml
qrcodes/src/: gen.rs  parse.rs
rpc/: Cargo.toml
rpc/src/: common.rs  lib.rs  methods.rs  network_config.rs  provider.rs  zil_interfaces.rs
session/: Cargo.toml
session/src/: device.rs  keychain_store.rs  keychain_store_android.rs  keychain_store_apple.rs  keychain_store_linux.rs  keychain_store_windows.rs  lib.rs  management.rs
settings/: Cargo.toml
settings/src/: argon2.rs  browser.rs  common_settings.rs  crypto.rs  currency.rs  language.rs  lib.rs  locale.rs  network.rs  notifications.rs  notificcations.rs  security.rs  settings.rs  storage.rs  theme.rs  wallet_settings.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  zilliqa_message.rs
storage/: Cargo.toml
storage/src/: codec.rs  data_warp.rs  lib.rs
test_data/: Cargo.toml
test_data/src/: lib.rs
token/: Cargo.toml
token/src/: ft.rs  ft_parse.rs  lib.rs  token_type.rs
token_quotes/: Cargo.toml
token_quotes/src/: bnb_tokens.rs  coingecko.rs  coingecko_tokens.rs  lib.rs  zilliqa_tokens.rs
wallet/: Cargo.toml
wallet/src/: account.rs  account_type.rs  ft.rs  lib.rs  traits.rs  wallet_account.rs  wallet_backup.rs  wallet_crypto.rs  wallet_data.rs  wallet_init.rs  wallet_network.rs  wallet_security.rs  wallet_storage.rs  wallet_token.rs  wallet_transaction.rs  wallet_types.rs
zil_cc/: Cargo.toml
zil_cc/src/: lib.rs
zil_errors/: Cargo.toml
zil_errors/src/: account.rs  address.rs  background.rs  bip32.rs  cipher.rs  crypto.rs  keychain.rs  keypair.rs  lib.rs  network.rs  ntru.rs  rpc.rs  session.rs  settings.rs  storage.rs  token.rs  tx.rs  wallet.rs  zilliqa.rs
zilliqa/: Cargo.toml
zilliqa/src/: account.rs  lib.rs
zilliqa/src/json_rpc/: mod.rs  zil.rs  zil_interfaces.rs  zil_methods.rs
zilpay/: Cargo.toml
zilpay/src/: lib.rs
