[package]
name = "zilpay_core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/zilpay/zilpay-core"
license = "GPL-3"
authors = ["Rinat.H <hicc0rus@gmail.com>"]
resolver = "2"

[lib]
name = "zilpay"
path = "zilpay/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "background",
  "cipher",
  "config",
  "crypto",
  "network",
  "proto", "session",
  "settings",
  "storage",
  "wallet",
  "zil_errors",
  "rpc",
  "zilpay", "token", "history",
]

[dependencies]
zilpay = { path = "./zilpay" }
zil_errors = { path = "./zil_errors" }
background = { path = "./background" }
crypto = { path = "./crypto" }
wallet = { path = "./wallet" }
settings = { path = "./settings" }
config = { path = "./config" }
token = { path = "./token" }
proto = { path = "./proto" }
rpc = { path = "../rpc" }

[workspace.dependencies]
async-trait = "0.1.83"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive", "rc"] }
alloy = { version = "0.7.2", features = ["full"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full", "test-util"] }
ntrulp = { version = "0.2.3", features = ["ntrup761", "std"] }
reqwest = { version = "0.11", features = ["json"] }
num_cpus = "1.16.0"
bip39 = "2.0.0"
ripemd = "0.1.3"
k256 = { version = "0.13.4", features = ["ecdsa", "arithmetic"] }
bech32 = "0.11.0"
thiserror = "1.0.63"
sled = "0.34.7"
directories = "5.0.1"
hmac = "0.12.1"
rust-argon2 = "2.1.0"

[dev-dependencies]
mockito = "1.5.0"
