[package]
name = "zilpay_core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/zilpay/zilpay-core"
license = "GPL-3"
authors = ["Rinat.H <hicc0rus@gmail.com>"]
resolver = "2"

[lib]
name = "zilpay"
path = "zilpay/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "background",
  "cipher",
  "config",
  "crypto",
  "network",
  "proto", "session",
  "settings",
  "storage",
  "wallet",
  "errors",
  "rpc",
  "zilpay", "token", "history", "cache", "qrcodes", "intl",
]

[dependencies]
rustls.workspace = true
zilpay = { path = "./zilpay" }
errors = { path = "./errors" }
background = { path = "./background" }
crypto = { path = "./crypto" }
wallet = { path = "./wallet" }
settings = { path = "./settings" }
config = { path = "./config" }
token = { path = "./token" }
proto = { path = "./proto" }
history = { path = "./history" }
rpc = { path = "./rpc" }
cipher = { path = "./cipher" }
network = { path = "./network" }
intl = { path = "./intl" }
cache = { path = "./cache" }
qrcodes = { path = "./qrcodes" }

[workspace.dependencies]
image = "0.25.5"
async-trait = "0.1.83"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive", "rc"] }
alloy = { version = "1.0.3", features = ["rlp", "eips", "eip712", "consensus", "signer-local", "k256", "dyn-abi", "json-abi", "rpc-types", "sol-types", "network"], default-features = false }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
tokio = { version = "1.47.1", features = ["macros"], default-features = false }
ntrulp = { version = "0.2.3", features = ["ntrup761", "std"] }
reqwest = { version = "0.12.23", features = ["rustls-tls", "json", "socks", "gzip", "brotli"], default-features = false }
ripemd = "0.1.3"
pqbip39 = { version = "0.1.1", features = ["unicode-normalization", "zeroize"] }
k256 = { version = "0.13.4", features = ["ecdsa", "arithmetic"] }
bech32 = "0.11.0"
bs58 = "0.5.1"
thiserror = "2.0.12"
sled = "0.34.7"
directories = "6.0.0"
hmac = "0.12.1"
rust-argon2 = "2.1.0"
bitcoin = { version = "0.32.5", features = ["serde", "base64"] }
electrum-client = { version = "0.24.1", default-features = false, features = ["proxy", "use-rustls-ring"] }
rustls = { version = "0.23", features = ["ring", "std"], default-features = false }

keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
zeroize = "1.8.2"
secrecy = "0.10.3"
security-framework = "3.5.1"
security-framework-sys = { version = "2.15.0", features = ["OSX_10_13"] }
core-foundation = "0.10.1"

[dev-dependencies]
mockito = "1.5.0"
