[package]
name = "background"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
hex.workspace = true
rand_chacha.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
bincode.workspace = true
pqbip39.workspace = true
tokio.workspace = true
async-trait.workspace = true
sha2.workspace = true

errors = { path = "../errors" }
wallet = { path = "../wallet" }
rpc = { path = "../rpc" }
token = { path = "../token" }
storage = { path = "../storage" }
config = { path = "../config" }
settings = { path = "../settings" }
crypto = { path = "../crypto" }
proto = { path = "../proto" }
cipher = { path = "../cipher" }
session = { path = "../session" }
network = { path = "../network" }
history = { path = "../history" }

[dev-dependencies]
mockito = "1.5.0"

