[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
ntrulp.workspace = true
rand_chacha.workspace = true
rand.workspace = true
hex.workspace = true
serde.workspace = true
rust-argon2.workspace = true
zil_errors = { path = "../zil_errors" }
config = { path = "../config" }
aes-gcm = "0.10.3"
