[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
ntrulp.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
serde.workspace = true
zeroize.workspace = true
rust-argon2.workspace = true
errors = { path = "../errors" }
config = { path = "../config" }
aes-gcm = "0.10.3"
kuznechik = "0.4.0"
safe_pqc_kyber = "0.6.3"
