[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
rand_chacha.workspace = true
rand.workspace = true
k256.workspace = true
sha2.workspace = true
pqbip39.workspace = true
bitcoin.workspace = true
errors = { path = "../errors" }
config = { path = "../config" }

