[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
zil_errors = { path = "../zil_errors" }
config = { path = "../config" }
wallet = { path = "../wallet" }
proto = { path = "../proto" }
zilliqa = { path = "../zilliqa" }
serde = { version = "1.0.204", features = ["derive", "rc"] }
hex = "0.4.3"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full", "test-util"] }
alloy = { version = "0.4.2", features = ["full"] }

[dev-dependencies]
mockito = "1.5.0"
