[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
zil_errors = { path = "../zil_errors" }
config = { path = "../config" }
wallet = { path = "../wallet" }
proto = { path = "../proto" }
zilliqa = { path = "../zilliqa" }

[dev-dependencies]
mockito = "1.5.0"
