[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
async-trait.workspace = true
bincode.workspace = true
storage = { path = "../storage" }
token = { path = "../token" }
errors = { path = "../errors" }
config = { path = "../config" }
proto = { path = "../proto" }
crypto = { path = "../crypto" }
rpc = { path = "../rpc" }

[dev-dependencies]
mockito = "1.5.0"
rand.workspace = true

