[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
rand_chacha.workspace = true
rand.workspace = true
bip39.workspace = true
ripemd.workspace = true
bech32.workspace = true
k256.workspace = true
hmac.workspace = true
tokio.workspace = true
crypto = { path = "../crypto" }
config = { path = "../config" }
zil_errors = { path = "../zil_errors" }
prost = "0.12.6"

[dev-dependencies]
mockito = "1.5.0"

