[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
serde_json.workspace = true
zeroize.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
rand_chacha.workspace = true
rand.workspace = true
pqbip39.workspace = true
ripemd.workspace = true
bech32.workspace = true
bs58.workspace = true
k256.workspace = true
hmac.workspace = true
tokio.workspace = true
bitcoin.workspace = true
bincode.workspace = true
prost.workspace = true
prost-types.workspace = true

crypto = { path = "../crypto" }
config = { path = "../config" }
errors = { path = "../errors" }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
mockito = "1.5.0"
test_data = { path = "../test_data" }

