[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
bincode.workspace = true
serde_json.workspace = true
serde.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
errors = { path = "../errors" }
config = { path = "../config" }

[dev-dependencies]
mockito = "1.5.0"
