[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
serde.workspace = true
rust-argon2.workspace = true
sha2.workspace = true
errors = { path = "../errors" }
config = { path = "../config" }
cipher = { path = "../cipher" }
token_quotes = { path = "../token_quotes" }
