[package]
name = "token_quotes"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
token = { path = "../token" }
proto = { path = "../proto" }
errors = { path = "../errors" }

[dev-dependencies]
mockito = "1.5.0"

