[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
serde.workspace = true
rand_chacha.workspace = true
rand.workspace = true
hex.workspace = true
bip39.workspace = true
sha2.workspace = true
bincode.workspace = true
async-trait.workspace = true

network = { path = "../network" }
zil_errors = { path = "../zil_errors" }
config = { path = "../config" }
crypto = { path = "../crypto" }
proto = { path = "../proto" }
cipher = { path = "../cipher" }
storage = { path = "../storage" }
settings = { path = "../settings" }
token = { path = "../token" }
rpc = { path = "../rpc" }
