[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
serde.workspace = true
rand_chacha.workspace = true
rand.workspace = true
hex.workspace = true
pqbip39.workspace = true
sha2.workspace = true
tokio.workspace = true
bincode.workspace = true
bitcoin.workspace = true
async-trait.workspace = true

network = { path = "../network" }
errors = { path = "../errors" }
config = { path = "../config" }
crypto = { path = "../crypto" }
proto = { path = "../proto" }
cipher = { path = "../cipher" }
storage = { path = "../storage" }
settings = { path = "../settings" }
token = { path = "../token" }
rpc = { path = "../rpc" }
history = { path = "../history" }

[dev-dependencies]
mockito = "1.5.0"
test_data = { path = "../test_data" }

