[package]
name = "zilliqa"
version = "0.1.0"
edition = "2021"

[dependencies]
zil_errors = { path = "../zil_errors" }
crypto = { path = "../crypto" }
proto = { path = "../proto" }
config = { path = "../config" }
hex = "0.4.3"
serde_json = "1.0.124"
reqwest = "0.11"
tokio = { version = "1.39.2", features = ["full", "test-util"] }

[dev-dependencies]
mockito = "1.5.0"
