[package]
name = "zilliqa"
version = "0.1.0"
edition = "2021"

[dependencies]
zil_errors = { path = "../zil_errors" }
crypto = { path = "../crypto" }
config = { path = "../config" }
proto = { path = "../proto" }

hex = "0.4.3"
serde_json = "1.0.124"
serde = { version = "1.0.204", features = ["derive", "rc"] }
reqwest = "0.11"
tokio = { version = "1.39.2", features = ["full", "test-util"] }

[dev-dependencies]
mockito = "1.5.0"
