[package]
name = "zilliqa"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
serde.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio.workspace = true
zil_errors = { path = "../zil_errors" }
crypto = { path = "../crypto" }
config = { path = "../config" }
proto = { path = "../proto" }

[dev-dependencies]
mockito = "1.5.0"
