[package]
name = "zilpay"
version = "0.1.0"
edition = "2021"

[dependencies]
zil_errors = { path = "../zil_errors" }
background = { path = "../background" }
crypto = { path = "../crypto" }
rpc = { path = "../rpc" }
wallet = { path = "../wallet" }
token = { path = "../token" }
settings = { path = "../settings" }
config = { path = "../config" }
proto = { path = "../proto" }
history = { path = "../history" }
