[package]
name = "zilpay"
version = "0.1.0"
edition = "2021"

[dependencies]
errors = { path = "../errors" }
intl = { path = "../intl" }
background = { path = "../background" }
crypto = { path = "../crypto" }
cipher = { path = "../cipher" }
rpc = { path = "../rpc" }
wallet = { path = "../wallet" }
token = { path = "../token" }
settings = { path = "../settings" }
config = { path = "../config" }
proto = { path = "../proto" }
history = { path = "../history" }
network = { path = "../network" }
cache = { path = "../cache" }
qrcodes = { path = "../qrcodes" }
